# rocqeteer

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SESSION_STATE.md  dune-project  rocq_effectful_extraction_report.md  rocqeteer.opam
.claude/: settings.json
ci/: check_discharge.sh  check_generated_fresh.sh  check_kb_lint.sh  check_no_admitted.sh  check_no_bind_in_generated.sh  check_no_objmagic.sh  check_no_stray_perform.sh  check_tcb.sh  gen_tcb_report.sh  kb-lint.py
codegen/: codegen.ml  dune  emit.ml  emit.mli
demo/: demo.ml  demo_html.ml  demo_report.html  dune
docs/: runtime_manifest.toml  tcb_report.md
examples/: Ask.v  Clock.v  Combinators.v  Expiry.v  Files.v  Journaling.v  KeyedStore.v  Memo.v  README.md  Sockets.v  Throw.v  Tracing.v  dune
extraction/: Extr.v  dune
kb/: GLOSSARY.md  INDEX.md  plan-towers.md  plan.md  questions-round1.md
kb/architecture/: INDEX.md  overview.md  tower-rationale.md
kb/architecture/decisions/: INDEX.md  adr-0001-first-order-ast.md  adr-0002-extraction-bridge.md  adr-0003-dependency-budget.md  adr-0004-trust-model.md  adr-0005-anti-vacuity.md  adr-0006-vertical-slice.md  adr-0007-ir-v2-sizing.md  adr-0008-general-match.md  adr-0009-vprim-registry.md  adr-0010-structured-values.md  adr-0011-time-and-expiring-store.md  adr-0012-list-elimination.md  adr-0013-journal-effect.md  adr-0014-wf-checker.md  adr-0015-program-logic.md  adr-0016-effect-towers.md  adr-0017-file-io.md  adr-0018-sockets.md  adr-0019-concurrency.md
kb/conventions/: INDEX.md  code-style.md  error-handling.md  testing-strategy.md
kb/domain/: prd.md
kb/indexes/: by-task.md
kb/properties/: INDEX.md  edge-cases.md  functional.md  non-functional.md
kb/reports/: kb-quiz-round1.md  plan-simulation-round1.md  premortem-idea-20260620.html  premortem-idea-20260620.md  sync-quiz.md
kb/runbooks/: INDEX.md  audit-checklist.md  build-and-validate.md
kb/spec/: INDEX.md  codegen.md  effect-signatures.md  effir.md  error-taxonomy.md  program-logic.md  reference-semantics.md  runtime-manifest.md  slice1-status.md
runtime/: cache.ml  cache.mli  codec.ml  codec.mli  dune  env.ml  env.mli  err.ml  err.mli  fault.ml  fault.mli  fileio.ml  fileio.mli  journal.ml  journal.mli  kv.ml  kv.mli  prims.ml  prims.mli  runtime.ml  runtime.mli  rval.ml  rval.mli  sockio.ml  sockio.mli  time.ml  time.mli  trace.ml  trace.mli
support/: coqconv.ml  coqconv.mli  dune
tests/: codec_test.ml  diff_bytes.ml  diff_cache.ml  diff_cache_k.ml  diff_dispatch.ml  diff_env.ml  diff_err.ml  diff_file.ml  diff_fold.ml  diff_journal.ml  diff_journal_k.ml  diff_kv.ml  diff_prims.ml  diff_sock.ml  diff_store.ml  diff_store_k.ml  diff_structval.ml  diff_test.ml  diff_time.ml  diff_trace.ml  dune  wf_gate_test.ml
theories/: BytesVal.v  Cache.v  Cek.v  Codec.v  Demo.v  Dispatch.v  EffIR.v  Elab.v  ElabNs.v  Env.v  Error.v  FileIO.v  Fold.v  Journal.v  KV.v  Logic.v  LogicDemo.v  LogicTactics.v  Prims.v  Recur.v  Samples.v  Sched.v  SchedHttp.v  SockIO.v  StoreAssert.v  StructVal.v  TimeStore.v  Trace.v  Wf.v  dune
tools/: dune  rhttpd.ml  rwc.ml
