; `unix` is used ONLY for Time.wall_clock_ms (the OCaml stdlib has no wall clock);
; it ships with the compiler distribution — not a new opam dependency (adr-0003 budget
; unchanged; recorded in docs/runtime_manifest.toml, effect."Time").
; public_name (R10 v1, adr-0014): installed with the package — the public codegen
; library chain (rocqeteer.codegen -> rocqeteer.coqconv -> rkv) requires it, and
; consumers link it anyway to RUN their generated direct-style modules.
(library
 (name rkv)
 (public_name rocqeteer.runtime)
 (libraries zarith unix))
