; public_name (R10 v1, adr-0014): installed with the package so the public
; rocqeteer.codegen library can depend on it (dune forbids public->private deps);
; consumers use it to bridge their extracted values at the boundary.
(library
 (name coqconv)
 (public_name rocqeteer.coqconv)
 (libraries ref_extracted zarith rkv))
